@@ -2,90 +2,272 @@ package br.com.vendas.mlfinanceiro.service;
 
 import br.com.vendas.mlfinanceiro.domain.Product;
 import br.com.vendas.mlfinanceiro.domain.Sale;
-import org.springframework.beans.factory.annotation.Value;
+import br.com.vendas.mlfinanceiro.domain.StockMovement;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class FileStoreService {
 
-    private final Path dataDir;
-    private final Path productsFile;
-    private final Path salesFile;
+    private static final String PRODUCTS_FILE =
+            "produtos.csv";
 
-    public FileStoreService(@Value("${app.data-dir:./data}") String dataDir) {
-        this.dataDir = Paths.get(dataDir).toAbsolutePath().normalize();
-        this.productsFile = this.dataDir.resolve("produtos.csv");
-        this.salesFile = this.dataDir.resolve("vendas.csv");
+    private static final String SALES_FILE =
+            "vendas.csv";
+
+    private static final String STOCK_MOVEMENTS_FILE =
+            "stock_movements.csv";
+
+    private final Path dataDir;
+
+    public FileStoreService() {
+
+        this.dataDir =
+                Paths.get("data");
+
+        try {
+
+            Files.createDirectories(
+                    dataDir
+            );
+
+        } catch (IOException e) {
+
+            throw new RuntimeException(
+                    "Erro ao criar diretório data",
+                    e
+            );
+        }
     }
 
-    public void ensureFilesExist() throws IOException {
-        Files.createDirectories(dataDir);
-        if (Files.notExists(productsFile)) {
-            Files.writeString(productsFile, "sku;mlItemId;name;costPrice;stock\n", StandardCharsets.UTF_8, StandardOpenOption.CREATE);
-        }
-        if (Files.notExists(salesFile)) {
-            Files.writeString(salesFile, "orderId;sku;productName;quantity;unitSalePrice;productCost;marketplaceFee;shippingCost;profit;soldAt\n",
-                    StandardCharsets.UTF_8, StandardOpenOption.CREATE);
-        }
+    public Path getDataDir() {
+
+        return dataDir;
     }
 
     public List<Product> loadProducts() {
+
+        Path path =
+                dataDir.resolve(
+                        PRODUCTS_FILE
+                );
+
+        if (!Files.exists(path)) {
+
+            return new ArrayList<Product>();
+        }
+
         try {
-            ensureFilesExist();
-            List<String> lines = Files.readAllLines(productsFile, StandardCharsets.UTF_8);
-            List<Product> products = new ArrayList<>();
-            for (int i = 1; i < lines.size(); i++) {
-                if (!lines.get(i).isBlank()) products.add(Product.fromCsv(lines.get(i)));
-            }
-            return products;
+
+            return Files.readAllLines(path)
+                    .stream()
+                    .skip(1)
+                    .filter(
+                            line -> !line.trim().isEmpty()
+                    )
+                    .map(
+                            Product::fromCsv
+                    )
+                    .collect(Collectors.toList());
+
         } catch (IOException e) {
-            throw new RuntimeException("Erro ao ler produtos", e);
+
+            throw new RuntimeException(
+                    "Erro ao carregar produtos",
+                    e
+            );
         }
     }
 
-    public void saveProducts(List<Product> products) {
+    public void saveProducts(
+            List<Product> products
+    ) {
+
+        Path path =
+                dataDir.resolve(
+                        PRODUCTS_FILE
+                );
+
+        List<String> lines =
+                new ArrayList<String>();
+
+        lines.add(
+                "sku;mlItemId;name;costPrice;stock"
+        );
+
+        for (Product product : products) {
+
+            lines.add(
+                    product.toCsv()
+            );
+        }
+
         try {
-            StringBuilder sb = new StringBuilder("sku;mlItemId;name;costPrice;stock\n");
-            for (Product p : products) {
-                sb.append(p.toCsv()).append("\n");
-            }
-            Files.writeString(productsFile, sb.toString(), StandardCharsets.UTF_8, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.CREATE);
+
+            Files.write(
+                    path,
+                    lines
+            );
+
         } catch (IOException e) {
-            throw new RuntimeException("Erro ao salvar produtos", e);
+
+            throw new RuntimeException(
+                    "Erro ao salvar produtos",
+                    e
+            );
         }
     }
 
     public List<Sale> loadSales() {
+
+        Path path =
+                dataDir.resolve(
+                        SALES_FILE
+                );
+
+        if (!Files.exists(path)) {
+
+            return new ArrayList<Sale>();
+        }
+
         try {
-            ensureFilesExist();
-            List<String> lines = Files.readAllLines(salesFile, StandardCharsets.UTF_8);
-            List<Sale> sales = new ArrayList<>();
-            for (int i = 1; i < lines.size(); i++) {
-                if (!lines.get(i).isBlank()) sales.add(Sale.fromCsv(lines.get(i)));
-            }
-            return sales;
+
+            return Files.readAllLines(path)
+                    .stream()
+                    .skip(1)
+                    .filter(
+                            line -> !line.trim().isEmpty()
+                    )
+                    .map(
+                            Sale::fromCsv
+                    )
+                    .collect(Collectors.toList());
+
         } catch (IOException e) {
-            throw new RuntimeException("Erro ao ler vendas", e);
+
+            throw new RuntimeException(
+                    "Erro ao carregar vendas",
+                    e
+            );
         }
     }
 
-    public void saveSales(List<Sale> sales) {
+    public void saveSales(
+            List<Sale> sales
+    ) {
+
+        Path path =
+                dataDir.resolve(
+                        SALES_FILE
+                );
+
+        List<String> lines =
+                new ArrayList<String>();
+
+        lines.add(
+                "orderId;sku;productName;marketplace;quantity;grossAmount;netAmount;unitSalePrice;productCost;extraCosts;marketplaceFee;shippingCost;profit;profitMargin;soldAt"
+        );
+
+        for (Sale sale : sales) {
+
+            lines.add(
+                    sale.toCsv()
+            );
+        }
+
         try {
-            StringBuilder sb = new StringBuilder("orderId;sku;productName;quantity;unitSalePrice;productCost;marketplaceFee;shippingCost;profit;soldAt\n");
-            for (Sale s : sales) {
-                sb.append(s.toCsv()).append("\n");
-            }
-            Files.writeString(salesFile, sb.toString(), StandardCharsets.UTF_8, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.CREATE);
+
+            Files.write(
+                    path,
+                    lines
+            );
+
         } catch (IOException e) {
-            throw new RuntimeException("Erro ao salvar vendas", e);
+
+            throw new RuntimeException(
+                    "Erro ao salvar vendas",
+                    e
+            );
         }
     }
 
-    public Path getDataDir() { return dataDir; }
+    public List<StockMovement> loadStockMovements() {
+
+        Path path =
+                dataDir.resolve(
+                        STOCK_MOVEMENTS_FILE
+                );
+
+        if (!Files.exists(path)) {
+
+            return new ArrayList<StockMovement>();
+        }
+
+        try {
+
+            return Files.readAllLines(path)
+                    .stream()
+                    .skip(1)
+                    .filter(
+                            line -> !line.trim().isEmpty()
+                    )
+                    .map(
+                            StockMovement::fromCsv
+                    )
+                    .collect(Collectors.toList());
+
+        } catch (IOException e) {
+
+            throw new RuntimeException(
+                    "Erro ao carregar movimentações de estoque",
+                    e
+            );
+        }
+    }
+
+    public void saveStockMovements(
+            List<StockMovement> movements
+    ) {
+
+        Path path =
+                dataDir.resolve(
+                        STOCK_MOVEMENTS_FILE
+                );
+
+        List<String> lines =
+                new ArrayList<String>();
+
+        lines.add(
+                "sku;type;quantity;reference;createdAt"
+        );
+
+        for (StockMovement movement : movements) {
+
+            lines.add(
+                    movement.toCsv()
+            );
+        }
+
+        try {
+
+            Files.write(
+                    path,
+                    lines
+            );
+
+        } catch (IOException e) {
+
+            throw new RuntimeException(
+                    "Erro ao salvar movimentações",
+                    e
+            );
+        }
+    }
 }
